# bcv-fx-ingestor

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  health.yml  smoke.yml
deploy/cloudflare/: package-lock.json  package.json  ui.js  vitest.config.js  worker.js  wrangler.toml
deploy/cloudflare/test/: worker.spec.js
deploy/docker/ca-extra/: README.md
deploy/k8s/base/: cronjob.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  (+1 more)
docs/00-project/: charter.md  data-classification.md  glossary.md
docs/01-requirements/: consulta-descarga-fx.md  ingesta-historicos-fx.md
docs/02-design/: architecture.md  threat-model.md
docs/03-implementation/: repo-history.md
docs/04-testing/: test-strategy.md
docs/05-deployment/: deployment.md
docs/06-monitoring/: observability.md
gates/: gate-0-requirements-fx-ing-002.md  gate-0-requirements.md  gate-1-design-fx-ing-002.md  gate-1-design.md  gate-2-implementation-fx-ing-002.md  gate-2-implementation.md  gate-3-testing.md  gate-4-deployment.md  gate-5-monitoring.md
scripts/: gitgraph_from_log.py  validate_mermaid.py
src/bcv_ingest/: __init__.py  cli.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_rendimiento.py
tests/integration/: test_cli_en_proceso.py  test_descargador_http.py  test_descargar_periodo.py  test_exportador_json.py  test_ingestar_archivo.py  test_lector_xls.py  test_repositorio_sqlite.py
tests/unit/: test_exportar_publicacion.py  test_lector_anclas.py  test_periodo.py  test_redenominaciones.py  test_validador.py
(+43 files in other folders)
