[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bcv-fx-ingestor"
version = "0.3.0"
description = "Ingesta idempotente de los tipos de cambio de referencia históricos del BCV hacia SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xlrd>=2.0.1",
    "httpx>=0.27",
    "truststore>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bcv-ingest = "bcv_ingest.cli:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
